[package]
name = "pop-launcher-mpd-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd_client = "0.7.3"
tokio = { version = "1.18.2", features = ["rt"] }
tokio-stream = "0.1.8"
once_cell = "1.10.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
