[package]
name = "pop-launcher-mpd-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt", "io-util"] }
mpd_client = "0.7.3"
pop-launcher-toolkit = {path = "../launcher/toolkit", features = ["plugin_trait"]}